dublin-coach-frontend/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "51"
  creationTimestamp: 2018-01-23T15:27:51Z
  generation: 51
  labels:
    run: dublin-coach-frontend
  name: dublin-coach-frontend
  namespace: default
  resourceVersion: "4457096"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/dublin-coach-frontend
  uid: f9a7bb37-0051-11e8-8307-42010af00188
spec:
  replicas: 1
  selector:
    matchLabels:
      run: dublin-coach-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: dublin-coach-frontend
    spec:
      containers:
      - image: eu.gcr.io/dublin-coach-123/dublin-coach-frontend:0.268
        imagePullPolicy: IfNotPresent
        name: dublin-coach-frontend
        ports:
        - containerPort: 4000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-01-23T15:27:51Z
    lastUpdateTime: 2018-01-23T15:27:51Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 51
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
